Set source freshness

--- a/greenery/models/staging/greenery/src_greenery.yml
+++ b/greenery/models/staging/greenery/src_greenery.yml
@@ -1,9 +1,15 @@
 version: 2
 
 sources:
+
   - name: greenery
     schema: public
     database: dbt
+
+    freshness:
+      warn_after: {count: 24, period: hour}
+      error_after: {count: 48, period: hour}
+
     tables:
       - name: addresses
         description: Addresses of users on Greenery platform
