--- a/greenery/dbt_project.yml
+++ b/greenery/dbt_project.yml
@@ -36,3 +36,7 @@ models:
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: view
+
+    staging:
+      greenery:
+        +materialized: view
