--- a/greenery/models/staging/greenery/stg_greenery.yml
+++ b/greenery/models/staging/greenery/stg_greenery.yml
@@ -5,7 +5,7 @@ models:
   - name: stg_greenery__addresses
     description: Staging addresses
     columns:
-      - name: address_id
+      - name: address_guid
         description: UUID for each unique address on platform
         tests:
           - not_null
@@ -22,7 +22,7 @@ models:
   - name: stg_greenery__users
     description: Staging users
     columns:
-      - name: user_id
+      - name: user_guid
         description: UUID for each unique user on platform
         tests:
           - not_null
@@ -39,60 +39,60 @@ models:
         description: Timestamp the user was created (in UTC)
       - name: updated_at_utc
         description: Timestamp the user was last updated (in UTC)
-      - name: address_id
+      - name: address_guid
         description: Default delivery address for the user
 
   - name: stg_greenery__promos
     description: Staging promos
     columns:
-      - name: promo_id
+      - name: promo_guid
         description: Each unique promocode on platform
         tests:
           - not_null
           - unique
       - name: discount
         description: Absolute dollar amount that is given off with the code
-      - name: status
+      - name: promo_status
         description: Is the promo code active or disabled
 
   - name: stg_greenery__products
     description: Staging products
     columns:
-      - name: product_id
+      - name: product_guid
         description: UUID for each unique product on platform
         tests:
           - not_null
           - unique
       - name: name
         description: Name of the product
-      - name: price
-        description: Price of the product
+      - name: price_usd
+        description: Price of the product (in USD)
       - name: inventory
         description: Amount of the inventory we have for this product
 
   - name: stg_greenery__orders
     description: Staging orders
     columns:
-      - name: order_id
+      - name: order_guid
         description: UUID for each unique order on platform
         tests:
           - not_null
           - unique
-      - name: user_id
+      - name: user_guid
         description: UserId of the user that placed this order
-      - name: promo_id
+      - name: promo_guid
         description: PromoId if any was used in the order
-      - name: address_id
+      - name: address_guid
         description: Delivery address for this order
       - name: created_at_utc
         description: Timestamp when the order was created (in UTC)
-      - name: order_cost
-        description: Dollar about of the items in the order
-      - name: shipping_cost
-        description: Cost of shipping for the order
-      - name: order_total
-        description: Total cost of the order including shipping
-      - name: tracking_id
+      - name: order_cost_usd
+        description: Dollar about of the items in the order (in USD)
+      - name: shipping_cost_usd
+        description: Cost of shipping for the order (in USD)
+      - name: order_total_usd
+        description: Total cost of the order including shipping (in USD)
+      - name: tracking_guid
         description: Tracking number for the order/package
       - name: shipping_service
         description: Company that was used for shipping
@@ -100,7 +100,7 @@ models:
         description: Estimated date of delivery (in UTC)
       - name: delivered_at_utc
         description: Actual timestamp of delivery (in UTC)
-      - name: status
+      - name: order_status
         description: Status of the order
         tests:
           - accepted_values:
@@ -109,11 +109,11 @@ models:
   - name: stg_greenery__order_items
     description: Staging order items
     columns:
-      - name: order_id
+      - name: order_guid
         description: Order ID of this order
         tests:
           - not_null
-      - name: product_id
+      - name: product_guid
         description: Product ID of a single item in this order
         tests:
           - not_null
@@ -123,14 +123,14 @@ models:
   - name: stg_greenery__events
     description: Staging events
     columns:
-      - name: event_id
+      - name: event_guid
         description: UUID of each unique event on the platform
         tests:
           - not_null
           - unique
-      - name: session_id
+      - name: session_guid
         description: UUID of each browsing session on the platform which can contain many events
-      - name: user_id
+      - name: user_guid
         description: UUID of the user that this event is associated with
       - name: page_url
         description: URL that the event happened on
@@ -138,7 +138,7 @@ models:
         description: Timestamp of the event (in UTC)
       - name: event_type
         description: Type of event
-      - name: order_id
+      - name: order_guid
         description: If the event is specific to an order (mostly used for checkout)
-      - name: product_id
+      - name: product_guid
         description: If the event is specific to a product
