--- a/greenery/models/staging/greenery/stg_greenery.yml
+++ b/greenery/models/staging/greenery/stg_greenery.yml
@@ -19,56 +19,28 @@ models:
       - name: country
         description: Country this delivery address is based in
 
-  - name: stg_greenery__users
-    description: Staging users
+  - name: stg_greenery__events
+    description: Staging events
     columns:
+      - name: event_guid
+        description: UUID of each unique event on the platform
+        tests:
+          - not_null
+          - unique
+      - name: session_guid
+        description: UUID of each browsing session on the platform which can contain many events
       - name: user_guid
-        description: UUID for each unique user on platform
-        tests:
-          - not_null
-          - unique
-      - name: first_name
-        description: First name of the user
-      - name: last_name
-        description: Last name of the user
-      - name: email
-        description: Email address of the user
-      - name: phone_number
-        description: Phone number of the user
+        description: UUID of the user that this event is associated with
+      - name: page_url
+        description: URL that the event happened on
       - name: created_at_utc
-        description: Timestamp the user was created (in UTC)
-      - name: updated_at_utc
-        description: Timestamp the user was last updated (in UTC)
-      - name: address_guid
-        description: Default delivery address for the user
-
-  - name: stg_greenery__promos
-    description: Staging promos
-    columns:
-      - name: promo_guid
-        description: Each unique promocode on platform
-        tests:
-          - not_null
-          - unique
-      - name: discount
-        description: Absolute dollar amount that is given off with the code
-      - name: promo_status
-        description: Is the promo code active or disabled
-
-  - name: stg_greenery__products
-    description: Staging products
-    columns:
+        description: Timestamp of the event (in UTC)
+      - name: event_type
+        description: Type of event
+      - name: order_guid
+        description: If the event is specific to an order (mostly used for checkout)
       - name: product_guid
-        description: UUID for each unique product on platform
-        tests:
-          - not_null
-          - unique
-      - name: name
-        description: Name of the product
-      - name: price_usd
-        description: Price of the product (in USD)
-      - name: inventory
-        description: Amount of the inventory we have for this product
+        description: If the event is specific to a product
 
   - name: stg_greenery__orders
     description: Staging orders
@@ -120,25 +92,53 @@ models:
       - name: quantity
         description: Number of units of the product in this order
 
-  - name: stg_greenery__events
-    description: Staging events
+  - name: stg_greenery__products
+    description: Staging products
     columns:
-      - name: event_guid
-        description: UUID of each unique event on the platform
+      - name: product_guid
+        description: UUID for each unique product on platform
         tests:
           - not_null
           - unique
-      - name: session_guid
-        description: UUID of each browsing session on the platform which can contain many events
+      - name: name
+        description: Name of the product
+      - name: price_usd
+        description: Price of the product (in USD)
+      - name: inventory
+        description: Amount of the inventory we have for this product
+
+  - name: stg_greenery__promos
+    description: Staging promos
+    columns:
+      - name: promo_guid
+        description: Each unique promocode on platform
+        tests:
+          - not_null
+          - unique
+      - name: discount_usd
+        description: Absolute dollar amount that is given off with the code
+      - name: promo_status
+        description: Is the promo code active or disabled
+
+  - name: stg_greenery__users
+    description: Staging users
+    columns:
       - name: user_guid
-        description: UUID of the user that this event is associated with
-      - name: page_url
-        description: URL that the event happened on
+        description: UUID for each unique user on platform
+        tests:
+          - not_null
+          - unique
+      - name: first_name
+        description: First name of the user
+      - name: last_name
+        description: Last name of the user
+      - name: email
+        description: Email address of the user
+      - name: phone_number
+        description: Phone number of the user
       - name: created_at_utc
-        description: Timestamp of the event (in UTC)
-      - name: event_type
-        description: Type of event
-      - name: order_guid
-        description: If the event is specific to an order (mostly used for checkout)
-      - name: product_guid
-        description: If the event is specific to a product
+        description: Timestamp the user was created (in UTC)
+      - name: updated_at_utc
+        description: Timestamp the user was last updated (in UTC)
+      - name: address_guid
+        description: Default delivery address for the user
