Test event type containing only accepted values

--- a/greenery/models/staging/greenery/stg_greenery.yml
+++ b/greenery/models/staging/greenery/stg_greenery.yml
@@ -37,6 +37,9 @@ models:
         description: Timestamp of the event (in UTC)
       - name: event_type
         description: Type of event
+        tests:
+          - accepted_values:
+              values: ['add_to_cart', 'checkout', 'page_view', 'package_shipped']
       - name: order_guid
         description: If the event is specific to an order (mostly used for checkout)
       - name: product_guid
