Use on-run-end to grant permission to reporing role

--- a/greenery/dbt_project.yml
+++ b/greenery/dbt_project.yml
@@ -42,3 +42,7 @@ models:
         +materialized: view
       tutorial:
         +enabled: false
+
+on-run-end:
+  - "grant usage on schema {{ target.schema }} to reporting"
+  - "grant select on all tables in schema {{ target.schema }} to reporting"
