--- a/greenery/packages.yml
+++ b/greenery/packages.yml
@@ -1,3 +1,5 @@
 packages:
   - package: dbt-labs/dbt_utils
-    version: 0.8.2
+    version: 0.8.6
+  - package: calogica/dbt_expectations
+    version: 0.5.8
