--- a/greenery/models/staging/greenery/stg_greenery.yml
+++ b/greenery/models/staging/greenery/stg_greenery.yml
@@ -14,6 +14,12 @@ models:
         description: The first few lines of the address
       - name: zipcode
         description: The zipcode of the address
+        tests:
+          - dbt_expectations.expect_column_values_to_be_of_type:
+              column_type: text
+          - dbt_expectations.expect_column_value_lengths_to_be_between:
+              min_value: 4
+              max_value: 5
       - name: state
         description: State this delivery address is based in
       - name: country
